--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
@@ -342,3 +342,11 @@ notes:
       $((\pi/2)) + 2n\pi, 3)$, $((3\pi/2) + 2n\pi, -1)$, $n$ an integer.
     Annotations: ''
   tags: []
+- id: 1547510466097
+  fields:
+    Front: |
+      CCAC 03.04 51: If $F(x) = f(g(x))$, where $f(-2) = 8$, $f'(-2) = 4$, $f'(5) = 3$, $g(5) = -2$, and $g'(5) = 6$, find $F'(5)$.
+    Back: |
+      $24$.
+    Annotations: ''
+  tags: []
