--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
@@ -350,3 +350,25 @@ notes:
       $24$.
     Annotations: ''
   tags: []
+- id: 1547510684171
+  fields:
+    Front: |
+      CCAC 03.04 53: A table of values for $f$, $g$, $f'$, and $g'$ is given.
+      $$$$
+      \begin{array}{|c|c|c|c|c|}
+      \hline
+      x & f(x) & g(x) & f'(x) & g'(x) \\
+      \hline
+      1 & 3 & 2 & 4 & 6 \\
+      2 & 1 & 8 & 5 & 7 \\
+      3 & 7 & 2 & 7 & 9 \\
+      \hline
+      \end{array}
+      $$$$
+      (a) If $h(x) = f(g(x))$, find $h'(1)$.
+      (b) If $H(x) = g(f(x))$, find $H'(1)$.
+    Back: |
+      (a) $30$
+      (b) $36$
+    Annotations: ''
+  tags: []
