--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
@@ -388,3 +388,22 @@ notes:
       (c) $-2$
     Annotations: ''
   tags: []
+- id: 1547511093521
+  fields:
+    Front: |
+      CCAC 03.04 57: Use the table to estimate the value of $h'(0.5)$, where $h(x) = f(g(x))$.
+      $$$$
+      \begin{array}{|c|c|c|c|c|c|c|c|}
+      \hline
+      x & 0 & 0.1 & 0.2 & 0.3 & 0.4 & 0.5 & 0.6 \\
+      \hline
+      f(x) & 12.6 & 14.8 & 18.4 & 23.0 & 25.9 & 27.5 & 29.1 \\
+      \hline
+      g(x) & 0.58 & 0.40 & 0.37 & 0.26 & 0.17 & 0.10 & 0.05 \\
+      \hline
+      \end{array}
+      $$$$
+    Back: |
+      $-17.4$
+    Annotations: ''
+  tags: []
