--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/03.04.yml
@@ -572,3 +572,19 @@ notes:
       Horizontal at $(6, \pm 16)$, vertical at $(10, 0)$.
     Annotations: ''
   tags: []
+- id: 1547514344046
+  media:
+  - path: ${file_dir}/images/CCAC-03.04-85.1.jpg
+  fields:
+    Front: |
+      CCAC 03.04 85: A curve $C$ is defined by the parametric equations $x = t^2$, $y = t^3 - 3t$.
+      (a) Show that $C$ has two tangents at the point $(3, 0)$, and find their equations.
+      (b) Find the points on $C$ where the tangent is horizontal or vertical.
+      (c) Illustrate parts (a) and (b) by graphing $C$ and the tangent lines.
+    Back: |
+      (a) $y = \sqrt{3}x - 3\sqrt{3}$, $y = -\sqrt{3}x + 3\sqrt{3}$
+      (b) Horizontal at $(1, \pm 2)$; vertical at $(0, 0)$.
+      (c)
+      ![](CCAC-03.04-85.1.jpg)
+    Annotations: ''
+  tags: []
